@@ -1,35 +1,35 @@
 package com.hits.language_school_back.service;
 
+import com.hits.language_school_back.dto.GroupDTO;
+import com.hits.language_school_back.enums.Difficulty;
+import com.hits.language_school_back.filter.GroupFilter;
+import com.hits.language_school_back.filter.specifications.GroupSpecifications;
 import com.hits.language_school_back.infrastructure.GroupServiceImpl;
 import com.hits.language_school_back.model.Group;
-import com.hits.language_school_back.model.User;
 import com.hits.language_school_back.model.Language;
-import com.hits.language_school_back.enums.Role;
-import com.hits.language_school_back.enums.Difficulty;
+import com.hits.language_school_back.model.User;
 import com.hits.language_school_back.repository.GroupRepository;
 import com.hits.language_school_back.repository.UserRepository;
-import com.hits.language_school_back.repository.LanguageRepository;
-import com.hits.language_school_back.dto.GroupDTO;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.MockedStatic;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.jpa.domain.Specification;
 
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class GroupServiceTests {
-
-    @InjectMocks
-    private GroupServiceImpl groupService;
 
     @Mock
     private GroupRepository groupRepository;
@@ -37,73 +37,64 @@ class GroupServiceTests {
     @Mock
     private UserRepository userRepository;
 
-    @Mock
-    private LanguageRepository languageRepository;
+    @InjectMocks
+    private GroupServiceImpl groupService;
 
+    private Group group1;
+    private Group group2;
     private GroupDTO groupDTO;
-    private Group group;
-    private User user1;
-    private User user2;
-    private User user3;
     private Language language;
-    private Language language2;
+    private User teacher;
+    private User student;
 
     @BeforeEach
     void setUp() {
         language = new Language();
         language.setId(1L);
-        language.setName("Английский");
+        language.setName("English");
 
-        language2 = new Language();
-        language2.setId(2L);
-        language2.setName("Испанский");
+        group1 = new Group();
+        group1.setId(1L);
+        group1.setName("Group A");
+        group1.setDescription("Description A");
+        group1.setDifficulty(Difficulty.BEGINNER);
+        group1.setLanguage(language);
+        group1.setUsers(new ArrayList<>());
 
-        user1 = new User();
-        user1.setId(1L);
-        user1.setFirstName("Иван");
-        user1.setLastName("Петров");
-        user1.setEmail("ivan.petrov@example.com");
-        user1.setRole(Role.TEACHER);
-        user1.setLanguages(List.of(language));
-
-        user2 = new User();
-        user2.setId(2L);
-        user2.setFirstName("Анна");
-        user2.setLastName("Сидорова");
-        user2.setEmail("anna.sidorova@example.com");
-        user2.setRole(Role.STUDENT);
-        user2.setLanguages(List.of(language));
-
-        user3 = new User();
-        user3.setId(3L);
-        user3.setFirstName("Петр");
-        user3.setLastName("Иванов");
-        user3.setEmail("petr.ivanov@example.com");
-        user3.setRole(Role.STUDENT);
-        user3.setLanguages(List.of(language, language2));
-
-        group = new Group();
-        group.setId(1L);
-        group.setName("Группа А-1");
-        group.setDescription("Описание группы А-1");
-        group.setDifficulty(Difficulty.UPPER_INTERMEDIATE);
-        group.setLanguage(language);
-        group.setUsers(List.of(user1, user2, user3));
+        group2 = new Group();
+        group2.setId(2L);
+        group2.setName("Group B");
+        group2.setDescription("Description B");
+        group2.setDifficulty(Difficulty.ADVANCED);
+        group2.setLanguage(language);
+        group2.setUsers(new ArrayList<>());
 
         groupDTO = new GroupDTO();
-        groupDTO.setName("Новая группа");
-        groupDTO.setDescription("Описание новой группы");
-        groupDTO.setDifficulty(Difficulty.BEGINNER);
+        groupDTO.setName("New Group");
+        groupDTO.setDescription("New Description");
+        groupDTO.setDifficulty(Difficulty.ELEMENTARY);
         groupDTO.setLanguage(language);
+
+        teacher = new User();
+        teacher.setId(1L);
+        teacher.setFirstName("John");
+        teacher.setLastName("Doe");
+        teacher.setGroups(new ArrayList<>());
+
+        student = new User();
+        student.setId(2L);
+        student.setFirstName("Jane");
+        student.setLastName("Smith");
+        student.setGroups(new ArrayList<>());
     }
 
     @Test
-    void createGroup_ShouldCreateAndReturnGroup() {
+    @DisplayName("Should create group successfully")
+    void createGroup_ShouldSaveAndReturnGroup() {
         // Arrange
-        when(languageRepository.findById(language.getId())).thenReturn(Optional.of(language));
         when(groupRepository.save(any(Group.class))).thenAnswer(invocation -> {
             Group savedGroup = invocation.getArgument(0);
-            savedGroup.setId(1L);
+            savedGroup.setId(3L);
             return savedGroup;
         });
 
@@ -111,231 +102,297 @@ class GroupServiceTests {
         Group result = groupService.createGroup(groupDTO);
 
         // Assert
-        assertNotNull(result);
-        assertNotNull(result.getId());
-        assertEquals(groupDTO.getName(), result.getName());
-        assertEquals(groupDTO.getDescription(), result.getDescription());
-        assertEquals(groupDTO.getDifficulty(), result.getDifficulty());
-        assertEquals(groupDTO.getLanguage(), result.getLanguage());
+        assertThat(result).isNotNull();
+        assertThat(result.getId()).isEqualTo(3L);
+        assertThat(result.getName()).isEqualTo(groupDTO.getName());
+        assertThat(result.getDescription()).isEqualTo(groupDTO.getDescription());
+        assertThat(result.getDifficulty()).isEqualTo(groupDTO.getDifficulty());
+        assertThat(result.getLanguage()).isEqualTo(groupDTO.getLanguage());
 
-        verify(languageRepository, times(1)).findById(language.getId());
-        verify(groupRepository, times(1)).save(any(Group.class));
+        verify(groupRepository).save(any(Group.class));
     }
 
     @Test
-    void createGroup_WhenLanguageNotFound_ShouldThrowException() {
-        // Arrange
-        when(languageRepository.findById(language.getId())).thenReturn(Optional.empty());
-
-        // Act & Assert
-        Exception exception = assertThrows(RuntimeException.class,
-                () -> groupService.createGroup(groupDTO));
-        assertEquals("Language not found with id: " + language.getId(), exception.getMessage());
-
-        verify(languageRepository, times(1)).findById(language.getId());
-        verify(groupRepository, never()).save(any(Group.class));
-    }
-
-    @Test
+    @DisplayName("Should edit group successfully")
     void editGroup_ShouldUpdateAndReturnGroup() {
         // Arrange
         Long groupId = 1L;
-        Group existingGroup = new Group();
-        existingGroup.setId(groupId);
-        existingGroup.setName("Старое название");
-        existingGroup.setDescription("Старое описание");
-        existingGroup.setDifficulty(Difficulty.PROFICIENCY);
-        existingGroup.setLanguage(language2);
-        existingGroup.setUsers(List.of(user1, user2));
-
-        when(groupRepository.findById(groupId)).thenReturn(Optional.of(existingGroup));
-        when(languageRepository.findById(language.getId())).thenReturn(Optional.of(language));
-        when(groupRepository.save(any(Group.class))).thenReturn(existingGroup);
+        when(groupRepository.save(any(Group.class))).thenAnswer(invocation -> invocation.getArgument(0));
 
         // Act
         Group result = groupService.editGroup(groupDTO, groupId);
 
         // Assert
-        assertNotNull(result);
-        assertEquals(groupId, result.getId());
-        assertEquals(groupDTO.getName(), result.getName());
-        assertEquals(groupDTO.getDescription(), result.getDescription());
-        assertEquals(groupDTO.getDifficulty(), result.getDifficulty());
-        assertEquals(groupDTO.getLanguage(), result.getLanguage());
+        assertThat(result).isNotNull();
+        assertThat(result.getId()).isEqualTo(groupId);
+        assertThat(result.getName()).isEqualTo(groupDTO.getName());
+        assertThat(result.getDescription()).isEqualTo(groupDTO.getDescription());
+        assertThat(result.getDifficulty()).isEqualTo(groupDTO.getDifficulty());
+        assertThat(result.getLanguage()).isEqualTo(groupDTO.getLanguage());
 
-        verify(groupRepository, times(1)).findById(groupId);
-        verify(languageRepository, times(1)).findById(language.getId());
-        verify(groupRepository, times(1)).save(any(Group.class));
+        verify(groupRepository).save(any(Group.class));
     }
 
     @Test
-    void editGroup_WhenGroupNotFound_ShouldThrowException() {
+    @DisplayName("Should get group by name")
+    void getByName_ShouldReturnGroup() {
         // Arrange
-        Long groupId = 999L;
-        when(groupRepository.findById(groupId)).thenReturn(Optional.empty());
+        String groupName = "Group A";
+        when(groupRepository.findByName(groupName)).thenReturn(group1);
 
-        // Act & Assert
-        Exception exception = assertThrows(RuntimeException.class,
-                () -> groupService.editGroup(groupDTO, groupId));
-        assertEquals("Group not found with id: 999", exception.getMessage());
+        // Act
+        Group result = groupService.getByName(groupName);
 
-        verify(groupRepository, times(1)).findById(groupId);
-        verify(languageRepository, never()).findById(anyLong());
-        verify(groupRepository, never()).save(any(Group.class));
+        // Assert
+        assertThat(result).isNotNull();
+        assertThat(result.getId()).isEqualTo(group1.getId());
+        assertThat(result.getName()).isEqualTo(group1.getName());
+        verify(groupRepository).findByName(groupName);
     }
 
     @Test
-    void editGroup_WhenLanguageNotFound_ShouldThrowException() {
+    @DisplayName("Should return null when getting group by non-existent name")
+    void getByName_WithNonExistentName_ShouldReturnNull() {
         // Arrange
-        Long groupId = 1L;
-        when(groupRepository.findById(groupId)).thenReturn(Optional.of(group));
-        when(languageRepository.findById(language.getId())).thenReturn(Optional.empty());
+        String groupName = "NonExistent";
+        when(groupRepository.findByName(groupName)).thenReturn(null);
 
-        // Act & Assert
-        Exception exception = assertThrows(RuntimeException.class,
-                () -> groupService.editGroup(groupDTO, groupId));
-        assertEquals("Language not found with id: " + language.getId(), exception.getMessage());
+        // Act
+        Group result = groupService.getByName(groupName);
 
-        verify(groupRepository, times(1)).findById(groupId);
-        verify(languageRepository, times(1)).findById(language.getId());
-        verify(groupRepository, never()).save(any(Group.class));
+        // Assert
+        assertThat(result).isNull();
+        verify(groupRepository).findByName(groupName);
     }
 
     @Test
-    void deleteGroup_ShouldDeleteGroup() {
+    @DisplayName("Should delete group by ID")
+    void deleteGroup_ShouldCallRepositoryDelete() {
         // Arrange
         Long groupId = 1L;
-        when(groupRepository.existsById(groupId)).thenReturn(true);
         doNothing().when(groupRepository).deleteById(groupId);
 
         // Act
         groupService.deleteGroup(groupId);
 
         // Assert
-        verify(groupRepository, times(1)).existsById(groupId);
-        verify(groupRepository, times(1)).deleteById(groupId);
+        verify(groupRepository).deleteById(groupId);
     }
 
     @Test
-    void deleteGroup_WhenGroupDoesNotExist_ShouldThrowException() {
+    @DisplayName("Should get all groups")
+    void getGroups_ShouldReturnListOfGroups() {
         // Arrange
-        Long groupId = 999L;
-        when(groupRepository.existsById(groupId)).thenReturn(false);
-
-        // Act & Assert
-        Exception exception = assertThrows(RuntimeException.class,
-                () -> groupService.deleteGroup(groupId));
-        assertEquals("Group not found with id: 999", exception.getMessage());
-
-        verify(groupRepository, times(1)).existsById(groupId);
-        verify(groupRepository, never()).deleteById(anyLong());
-    }
-
-    @Test
-    void getGroups_ShouldReturnAllGroups() {
-        // Arrange
-        Group group2 = new Group();
-        group2.setId(2L);
-        group2.setName("Группа Б-2");
-        group2.setDescription("Описание группы Б-2");
-        group2.setDifficulty(Difficulty.ELEMENTARY);
-        group2.setLanguage(language2);
-        group2.setUsers(List.of(user1, user3));
-
-        List<Group> groups = Arrays.asList(group, group2);
+        List<Group> groups = Arrays.asList(group1, group2);
         when(groupRepository.findAll()).thenReturn(groups);
 
         // Act
         List<Group> result = groupService.getGroups();
 
         // Assert
-        assertNotNull(result);
-        assertEquals(2, result.size());
-        assertEquals(group.getId(), result.get(0).getId());
-        assertEquals(group2.getId(), result.get(1).getId());
-
-        verify(groupRepository, times(1)).findAll();
+        assertThat(result).isNotNull();
+        assertThat(result).hasSize(2);
+        assertThat(result).containsExactly(group1, group2);
+        verify(groupRepository).findAll();
     }
 
     @Test
-    void getGroups_WhenNoGroups_ShouldReturnEmptyList() {
-        // Arrange
-        when(groupRepository.findAll()).thenReturn(List.of());
-
-        // Act
-        List<Group> result = groupService.getGroups();
-
-        // Assert
-        assertNotNull(result);
-        assertTrue(result.isEmpty());
-        verify(groupRepository, times(1)).findAll();
-    }
-
-    @Test
-    void getGroupsByTeacherId_ShouldReturnGroupsForTeacher() {
+    @DisplayName("Should get groups by teacher ID")
+    void getGroupsByTeacherId_ShouldReturnListOfGroups() {
         // Arrange
         Long teacherId = 1L;
-
-        List<Group> expectedGroups = Arrays.asList(group);
-        when(groupRepository.findByUsersId(teacherId)).thenReturn(expectedGroups);
+        List<Group> groups = Arrays.asList(group1, group2);
+        when(groupRepository.findByUserId(teacherId)).thenReturn(groups);
 
         // Act
         List<Group> result = groupService.getGroupsByTeacherId(teacherId);
 
         // Assert
-        assertNotNull(result);
-        assertEquals(1, result.size());
-
-        verify(groupRepository, times(1)).findByUsersId(teacherId);
+        assertThat(result).isNotNull();
+        assertThat(result).hasSize(2);
+        assertThat(result).containsExactly(group1, group2);
+        verify(groupRepository).findByUserId(teacherId);
     }
 
     @Test
-    void getGroupsByTeacherId_WhenNoGroups_ShouldReturnEmptyList() {
-        // Arrange
-        Long teacherId = 1L;
-        when(groupRepository.findByUsersId(teacherId)).thenReturn(List.of());
-
-        // Act
-        List<Group> result = groupService.getGroupsByTeacherId(teacherId);
-
-        // Assert
-        assertNotNull(result);
-        assertTrue(result.isEmpty());
-        verify(groupRepository, times(1)).findByUsersId(teacherId);
-    }
-
-    @Test
+    @DisplayName("Should get group by ID")
     void getByGroupId_ShouldReturnGroup() {
         // Arrange
         Long groupId = 1L;
-        when(groupRepository.findById(groupId)).thenReturn(Optional.of(group));
+        when(groupRepository.findById(groupId)).thenReturn(Optional.of(group1));
 
         // Act
         Group result = groupService.getByGroupId(groupId);
 
         // Assert
-        assertNotNull(result);
-        assertEquals(groupId, result.getId());
-        assertEquals(group.getName(), result.getName());
-        assertEquals(group.getDescription(), result.getDescription());
-        assertEquals(group.getDifficulty(), result.getDifficulty());
-        assertEquals(group.getLanguage(), result.getLanguage());
-        assertEquals(3, result.getUsers().size());
-
-        verify(groupRepository, times(1)).findById(groupId);
+        assertThat(result).isNotNull();
+        assertThat(result.getId()).isEqualTo(groupId);
+        assertThat(result.getName()).isEqualTo(group1.getName());
+        verify(groupRepository).findById(groupId);
     }
 
     @Test
-    void getByGroupId_WhenGroupNotFound_ShouldThrowException() {
+    @DisplayName("Should throw exception when getting group by non-existent ID")
+    void getByGroupId_WithNonExistentId_ShouldThrowException() {
         // Arrange
         Long groupId = 999L;
         when(groupRepository.findById(groupId)).thenReturn(Optional.empty());
 
         // Act & Assert
-        Exception exception = assertThrows(RuntimeException.class,
-                () -> groupService.getByGroupId(groupId));
-        assertEquals("Group not found with id: 999", exception.getMessage());
+        assertThatThrownBy(() -> groupService.getByGroupId(groupId))
+                .isInstanceOf(NoSuchElementException.class);
+    }
 
-        verify(groupRepository, times(1)).findById(groupId);
+    @Test
+    @DisplayName("Should get groups with filters")
+    void getGroupsWithFilters_ShouldReturnFilteredGroups() {
+        // Arrange
+        GroupFilter filter = new GroupFilter("Group", Difficulty.BEGINNER, "English");
+        Specification<Group> specification = mock(Specification.class);
+        List<Group> filteredGroups = Collections.singletonList(group1);
+
+        try (MockedStatic<GroupSpecifications> mockedStatic = mockStatic(GroupSpecifications.class)) {
+            mockedStatic.when(() -> GroupSpecifications.withFilters(filter)).thenReturn(specification);
+            when(groupRepository.findAll(specification)).thenReturn(filteredGroups);
+
+            // Act
+            List<Group> result = groupService.getGroupsWithFilters(filter);
+
+            // Assert
+            assertThat(result).isNotNull();
+            assertThat(result).hasSize(1);
+            assertThat(result.get(0)).isEqualTo(group1);
+            verify(groupRepository).findAll(specification);
+        }
+    }
+
+    @Test
+    @DisplayName("Should add student to group")
+    void addStudentToGroup_ShouldAddStudentAndReturnGroup() {
+        // Arrange
+        Long groupId = 1L;
+        Long studentId = 2L;
+
+        when(groupRepository.findById(groupId)).thenReturn(Optional.of(group1));
+        when(userRepository.findById(studentId)).thenReturn(Optional.of(student));
+        when(groupRepository.save(any(Group.class))).thenReturn(group1);
+
+        // Act
+        Group result = groupService.addStudentToGroup(groupId, studentId);
+
+        // Assert
+        assertThat(result).isNotNull();
+        assertThat(result.getUsers()).contains(student);
+        assertThat(student.getGroups()).contains(group1);
+
+        verify(groupRepository).findById(groupId);
+        verify(userRepository).findById(studentId);
+        verify(groupRepository).save(group1);
+    }
+
+    @Test
+    @DisplayName("Should throw exception when adding student to non-existent group")
+    void addStudentToGroup_WithNonExistentGroup_ShouldThrowException() {
+        // Arrange
+        Long groupId = 999L;
+        Long studentId = 2L;
+
+        when(groupRepository.findById(groupId)).thenReturn(Optional.empty());
+
+        // Act & Assert
+        assertThatThrownBy(() -> groupService.addStudentToGroup(groupId, studentId))
+                .isInstanceOf(NoSuchElementException.class)
+                .hasMessageContaining("Group not found");
+
+        verify(groupRepository).findById(groupId);
+        verify(userRepository, never()).findById(anyLong());
+        verify(groupRepository, never()).save(any(Group.class));
+    }
+
+    @Test
+    @DisplayName("Should throw exception when adding non-existent student to group")
+    void addStudentToGroup_WithNonExistentStudent_ShouldThrowException() {
+        // Arrange
+        Long groupId = 1L;
+        Long studentId = 999L;
+
+        when(groupRepository.findById(groupId)).thenReturn(Optional.of(group1));
+        when(userRepository.findById(studentId)).thenReturn(Optional.empty());
+
+        // Act & Assert
+        assertThatThrownBy(() -> groupService.addStudentToGroup(groupId, studentId))
+                .isInstanceOf(NoSuchElementException.class)
+                .hasMessageContaining("Student not found");
+
+        verify(groupRepository).findById(groupId);
+        verify(userRepository).findById(studentId);
+        verify(groupRepository, never()).save(any(Group.class));
+    }
+
+    @Test
+    @DisplayName("Should remove student from group")
+    void removeStudentFromGroup_ShouldRemoveStudentAndReturnGroup() {
+        // Arrange
+        Long groupId = 1L;
+        Long studentId = 2L;
+
+        group1.getUsers().add(student);
+        student.getGroups().add(group1);
+
+        when(groupRepository.findById(groupId)).thenReturn(Optional.of(group1));
+        when(userRepository.findById(studentId)).thenReturn(Optional.of(student));
+        when(groupRepository.save(any(Group.class))).thenReturn(group1);
+
+        // Act
+        Group result = groupService.removeStudentFromGroup(groupId, studentId);
+
+        // Assert
+        assertThat(result).isNotNull();
+        assertThat(result.getUsers()).doesNotContain(student);
+        assertThat(student.getGroups()).doesNotContain(group1);
+
+        verify(groupRepository).findById(groupId);
+        verify(userRepository).findById(studentId);
+        verify(groupRepository).save(group1);
+    }
+
+    @Test
+    @DisplayName("Should handle removing student when group has null users list")
+    void removeStudentFromGroup_WithNullUsersList_ShouldHandleGracefully() {
+        // Arrange
+        Long groupId = 1L;
+        Long studentId = 2L;
+
+        group1.setUsers(null);
+
+        when(groupRepository.findById(groupId)).thenReturn(Optional.of(group1));
+        when(userRepository.findById(studentId)).thenReturn(Optional.of(student));
+        when(groupRepository.save(any(Group.class))).thenReturn(group1);
+
+        // Act
+        Group result = groupService.removeStudentFromGroup(groupId, studentId);
+
+        // Assert
+        assertThat(result).isNotNull();
+        assertThat(student.getGroups()).doesNotContain(group1);
+
+        verify(groupRepository).findById(groupId);
+        verify(userRepository).findById(studentId);
+        verify(groupRepository).save(group1);
+    }
+
+    @Test
+    @DisplayName("Should throw exception when removing student from non-existent group")
+    void removeStudentFromGroup_WithNonExistentGroup_ShouldThrowException() {
+        // Arrange
+        Long groupId = 999L;
+        Long studentId = 2L;
+
+        when(groupRepository.findById(groupId)).thenReturn(Optional.empty());
+
+        // Act & Assert
+        assertThatThrownBy(() -> groupService.removeStudentFromGroup(groupId, studentId))
+                .isInstanceOf(NoSuchElementException.class)
+                .hasMessageContaining("Group not found");
     }
 }
